Cor para nosso site

--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,18 @@
+<head>
+
+    <link rel="stylesheet" href="Styless.css" />
+
+<Body>
+
 <header>Volei</header>
 
 
 <h1>COMO COMEÇAR NO VOLEI?</h1>
 
 <p><#Volei</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3oT3lO7AylI?si=TF1m5ljwAsCmc1yI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<Body>
+
+</head>
