--- a/Index.html
+++ b/Index.html
@@ -1,30 +1,8 @@
-<html lang="pt-br"</html>>
+<body>
+    <header>V</header>
 
-<head>
 
-    <link rel="stylesheet" href="Styless.css" />
-    <title>Aprender Volei</title>
+    <h1>Fundamentos basicos do volei</h1>
+    <p>#Volei</p>
 
-<Body>
-
-    <header>Volei</header>
-
-    <section>
-    <div>
-        <h1>COMO COMEÇAR NO VOLEI?</h1>
-        <p>
-            <#Volei< /p>
-    </div>
-
-    <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/3oT3lO7AylI?si=TF1m5ljwAsCmc1yI"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-</section>
-    <Body>
-
-        </head>
-
-</html>-
+</body>
