--- a/Index.html
+++ b/Index.html
@@ -4,23 +4,24 @@
 
     <link rel="stylesheet" href="styles.css">
     <title>Volei</title>
+    
 </head>
 
 <body>
-    <header>VOLEI</header>
+    <header>Volei</header>
 
     <section>
-        <div>
-            <h1>Fundamentos Básicos do volei</h1>
-            <p>#volei</p>
+        <div class="chamada-texto">
+            <h1>Como Começar no volei?</h1>
+            <p>isso é uma pergunta bastante comum, e precisamos começar pelas </p>
         </div>
 
         <div>
-            <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/ldy0v8fHqsg?si=bzKoNCDwzqMxbsJa&amp;controls=0&amp;start=37"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qc1wkTMmXY4?si=r6nf9U_xUtUKG2O6&amp;start=3" title="YouTube video player" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+
+            </iframe>
         </div>
     </section>
 
