--- a/Index.html
+++ b/Index.html
@@ -1,23 +1,40 @@
 <html lang="pt-BR">
 
 <head>
-
     <link rel="stylesheet" href="styles.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
     <title>Volei</title>
-
 </head>
 
 <body>
-    <header>Volei</header>
+    <header>VOLEI</header>
 
-    <section>
-
+    <section class="chamada">
         <div class="chamada-texto">
-            <h1>Como Começar no volei?</h1>
-            <p>isso é uma pergunta bastante comum, e precisamos começar pelas </p>
+            <h1>COMO COMEÇAR NO VOLEI?</h1>
+            <p>#volei</p>
         </div>
-        
+
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qc1wkTMmXY4?si=e1FcfL5rT1uzGbDp&amp;controls=0&amp;start=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        </div>
+    </section>
+
+    <section class="categoria">
+        <h2>Videos de regras avançadas</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=kDc82ShbBV0">
+                <img src="https://img.youtube.com/vi/kDc82ShbBV0/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=PK0zYxwv75E">
+                <img src="https://img.youtube.com/vi/PK0zYxwv75E/maxresdefault.jpg" />
+            </a>
+        </div>
     </section>
 
 </body>
